@@ -61,15 +61,25 @@ public class ProductTagServiceImpl implements ProductTagService {
         Page<ProductTag> productTagPage = productTagRepository.findByNameContaining(name, pageable);
 
         // Map to DTO responses
-        List<ProductTagDtoResponse> productTagDtoResponses = productTagPage.stream().map(productTagMapper::toDto).sorted(Comparator.comparing(ProductTagDtoResponse::getId).reversed()).collect(Collectors.toList());
+        List<ProductTagDtoResponse> productTagDtoResponses = productTagPage.stream()
+                .map(productTagMapper::toDto)
+                .sorted(Comparator.comparing(ProductTagDtoResponse::getId).reversed())
+                .collect(Collectors.toList());
 
         // Build the page response
-        return PageResponse.builder().page(productTagPage.getNumber()).size(productTagPage.getSize()).total(productTagPage.getTotalPages()).items(productTagDtoResponses).build();
+        return PageResponse.builder()
+                .page(productTagPage.getNumber())
+                .size(productTagPage.getSize())
+                .total(productTagPage.getTotalPages())
+                .items(productTagDtoResponses)
+                .build();
     }
 
     @Override
     public ProductTagDtoResponse getProductTag(Long id) {
-        ProductTag productTag = productTagRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Product tag with id not found: " + id));
+        ProductTag productTag = productTagRepository
+                .findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Product tag with id not found: " + id));
 
         return productTagMapper.toDto(productTag);
     }
@@ -94,7 +104,8 @@ public class ProductTagServiceImpl implements ProductTagService {
     }
 
     private Product getProduct(Long productId) {
-        return productRepository.findById(productId).orElseThrow(() -> new ResourceNotFoundException("Product with id not found: " + productId));
+        return productRepository.findById(productId)
+                .orElseThrow(() -> new ResourceNotFoundException("Product with id not found: " + productId));
     }
 
     private ProductTag saveProductTag(ProductTagRequestDto request) {
@@ -102,13 +113,23 @@ public class ProductTagServiceImpl implements ProductTagService {
     }
 
     private void saveProductTagMapping(Product product, ProductTag productTag) {
-        ProductProductTagMapping productTagMapping = ProductProductTagMapping.builder().product(product).productTag(productTag).build();
+        ProductProductTagMapping productTagMapping = ProductProductTagMapping.builder()
+                .product(product)
+                .productTag(productTag)
+                .build();
         productProductTagMappingRepository.save(productTagMapping);
     }
 
     private PageResponse<?> convertToPageResponse(Page<ProductTag> productTagPage, Pageable pageable) {
-        List<ProductTagDtoResponse> response = productTagPage.getContent().stream().map(productTagMapper::toDto).collect(Collectors.toList());
+        List<ProductTagDtoResponse> response = productTagPage.getContent()
+                .stream()
+                .map(productTagMapper::toDto)
+                .toList();
 
-        return PageResponse.builder().page(pageable.getPageNumber()).size(pageable.getPageSize()).total(productTagPage.getTotalPages()).items(response).build();
+        return PageResponse.builder()
+                .page(pageable.getPageNumber())
+                .size(pageable.getPageSize())
+                .total(productTagPage.getTotalPages())
+                .items(response).build();
     }
 }
